# EmotionChallenge

./: .gitignore  fact_sheets.tex  readme.md
cnn/: data_layer.py  deploy.prototxt  extract.py  landmark_224.py  net.prototxt  prepare_data.py  solver.prototxt  train_val.sh  util.py
crop_align/: CMakeLists.txt  __init__.py  crop_align.cpp  crop_align.py  imtransform.cpp  imtransform.h  landmark.py  util.py
data/: face_224  order_of_test.txt  order_of_validation.txt  readme.md  test_data  train_data  training_new.txt  training_validation_new.txt  val_data  val_ld_shuffle.txt
data/face_224/: readme.md
